removed old name

--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
         </p>
         <article class="message is-info">
           <div class="message-body">
-            &lt;div class="Heidelberg-Book" id="Heidelberg"&gt;
+            &lt;div class="c-flipbook" id="FlipBook"&gt;
               <br>
-              &lt;div class="Heidelberg-Page"&gt;
+              &lt;div class="c-flipbook__page"&gt;
                 <br>... your image here ...<br>
               &lt;/div&gt;
               <br>
-              &lt;div class="Heidelberg-Page"&gt;
+              &lt;div class="c-flipbook__page"&gt;
                 <br>... your image here ...<br>
               &lt;/div&gt;
               <br>
-              &lt;div class="Heidelberg-Page"&gt;
+              &lt;div class="c-flipbook__page"&gt;
                 <br>... your image here ...<br>
               &lt;/div&gt;
               <br>
@@ -133,23 +133,23 @@
       <div class="content">
         <div class="level">
           <div class="is-relative is-flex" style="margin: 0 auto 48px;width: 800px;height: 300px;">
-            <div class="Heidelberg-Book" id="Heidelberg">
-              <div class="Heidelberg-Page">
+            <div class="c-flipbook" id="FlipBook">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-1/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-2/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-3/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-4/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/doctor/page-1/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/doctor/page-2/boy/toddler/short/medium.jpg" />
               </div>
             </div>
@@ -160,23 +160,23 @@
         <h5 class="title is-6">canClose=true and initialCall=true</h5>
         <div class="level">
           <div class="is-relative is-flex" style="margin: 0 auto 48px;width: 800px;height: 300px;">
-            <div class="Heidelberg-Book" id="Heidelberg2">
-              <div class="Heidelberg-Page">
+            <div class="c-flipbook" id="FlipBook2">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-1/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-2/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-3/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-4/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/doctor/page-1/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/doctor/page-2/boy/toddler/short/medium.jpg" />
               </div>
             </div>
@@ -187,23 +187,23 @@
         <h5 class="title is-6">initialPage=2 and arrowKeys=false</h5>
         <div class="level">
           <div class="is-relative is-flex" style="margin: 0 auto 48px;width: 800px;height: 300px;">
-            <div class="Heidelberg-Book" id="Heidelberg3">
-              <div class="Heidelberg-Page">
+            <div class="c-flipbook" id="FlipBook3">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-1/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-2/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-3/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-4/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/doctor/page-1/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/doctor/page-2/boy/toddler/short/medium.jpg" />
               </div>
             </div>
@@ -215,23 +215,23 @@
         <div class="level">
           <button id="prev-button" class="button">Prev</button>
           <div class="is-relative is-flex" style="margin: 0 auto 32px;width: 800px;height: 300px;">
-            <div c48ss="Heidelberg-Book" id="Heidelberg4">
-              <div class="Heidelberg-Page">
+            <div c48ss="c-flipbook" id="FlipBook4">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-1/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-2/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-3/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/intro/page-4/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/doctor/page-1/boy/toddler/short/medium.jpg" />
               </div>
-              <div class="Heidelberg-Page">
+              <div class="c-flipbook__page">
                 <img class="image" src="https://whenigrowup.co.id/static/images/pages/doctor/page-2/boy/toddler/short/medium.jpg" />
               </div>
             </div>
@@ -247,9 +247,9 @@
   <script src="index.js"></script>
   <script>
     // default
-    new FlipBook('Heidelberg');
+    new FlipBook('FlipBook');
     // canClose=true and initialCall=true
-    new FlipBook('Heidelberg2', {
+    new FlipBook('FlipBook2', {
       canClose: true,
       initialCall: true,
       onPageTurn: (_, els) => {
@@ -257,7 +257,7 @@
       },
     });
     // initialPage=2 and arrowKeys=false
-    new FlipBook('Heidelberg3', {
+    new FlipBook('FlipBook3', {
       initialActivePage: 2,
       arrowKeys: false,
       onPageTurn: (_, els) => {
@@ -265,7 +265,7 @@
       },
     });
     // with previous and next button
-    new FlipBook('Heidelberg4', {
+    new FlipBook('FlipBook4', {
       nextButton: document.getElementById('next-button'),
       previousButton: document.getElementById('prev-button'),
       onPageTurn: (_, els) => {
