--- a/index.html
+++ b/index.html
@@ -149,22 +149,22 @@
           <div class="is-relative is-flex" style="margin: 0 auto 48px;width: 800px;height: 300px;">
             <div class="c-flipbook" id="FlipBook">
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-1/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/1.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-2/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/2.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-3/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/3.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-4/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/4.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/doctor/page-1/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/5.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/doctor/page-2/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/6.jpg" />
               </div>
             </div>
           </div>
@@ -176,22 +176,22 @@
           <div class="is-relative is-flex" style="margin: 0 auto 48px;width: 800px;height: 300px;">
             <div class="c-flipbook" id="FlipBook2">
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-1/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/1.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-2/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/2.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-3/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/3.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-4/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/4.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/doctor/page-1/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/5.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/doctor/page-2/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/6.jpg" />
               </div>
             </div>
           </div>
@@ -203,22 +203,22 @@
           <div class="is-relative is-flex" style="margin: 0 auto 48px;width: 800px;height: 300px;">
             <div class="c-flipbook" id="FlipBook3">
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-1/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/1.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-2/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/2.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-3/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/3.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-4/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/4.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/doctor/page-1/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/5.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/doctor/page-2/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/6.jpg" />
               </div>
             </div>
           </div>
@@ -231,22 +231,22 @@
           <div class="is-relative is-flex" style="margin: 0 auto 32px;width: 800px;height: 300px;">
             <div c48ss="c-flipbook" id="FlipBook4">
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-1/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/1.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-2/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/2.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-3/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/3.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/intro/page-4/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/4.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/doctor/page-1/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/5.jpg" />
               </div>
               <div class="c-flipbook__page">
-                <img class="image" src="https://whenigrowup.co.id/static/images/pages-sm/doctor/page-2/boy/toddler/short/medium.jpg" />
+                <img class="image" src="/images/6.jpg" />
               </div>
             </div>
           </div>
