feat: update demo to use UMD build of FlipBook and improve CSS transitions

--- a/demo/index.html
+++ b/demo/index.html
@@ -257,7 +257,7 @@
   </section>
 
 
-  <script src="flipbook.min.js"></script>
+  <script src="flipbook.umd.min.js"></script>
   <script>
     // default
     new FlipBook('FlipBook');
