docs: update index.html to reference CSS and JS from npm package and add installation instructions

--- a/demo/index.html
+++ b/demo/index.html
@@ -48,7 +48,7 @@
           <div class="message-body">
             &lt;head&gt;
             <br>...<br>
-            &lt;link rel="stylesheet" href="flipbook.css"&gt;
+            &lt;link rel="stylesheet" href="node_modules/hoverzoom-js/dist/flipbook.min.css"&gt;
             <br>...<br>
             &lt;/head&gt;
           </div>
@@ -60,9 +60,25 @@
           <div class="message-body">
             &lt;head&gt;
             <br>...<br>
-            &lt;script src="flipbook.js"&gt;&lt;/script&gt;
+            &lt;script src="node_modules/hoverzoom-js/dist/flipbook.umd.min.js"&gt;&lt;/script&gt;
             <br>...<br>
             &lt;/head&gt;
+          </div>
+        </article>
+        <p>
+          <strong>Or, import from npm in your project:</strong>
+        </p>
+        <article class="message is-success">
+          <div class="message-body">
+            <strong>Install:</strong><br>
+            <code>npm install flipbook-js</code>
+            <br><br>
+            <strong>Import in your JS/TS file:</strong><br>
+            <code>// ES Module<br>import FlipBook from 'flipbook-js';</code><br>
+            <code>// CommonJS<br>const FlipBook = require('flipbook-js');</code><br>
+            <br>
+            <strong>Import CSS:</strong><br>
+            <code>import 'flipbook-js/dist/flipbook.min.css';</code>
           </div>
         </article>
         <p>
